// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`haciendo pruebas en el componente <MultipleCustomHooks/> debe de mostrar la informacion 1`] = `
<div>
  <h1>
    Breaking Bad quotes
  </h1>
  <hr />
  <div
    className="blockquote text-right"
  >
    <p
      className="mb-3"
    >
      Hola Mundo
    </p>
    <footer
      className="blockquote-footer"
    >
      fernando
    </footer>
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    next quote
  </button>
</div>
`;

exports[`haciendo pruebas en el componente <MultipleCustomHooks/> debe mostrarse correctamente  1`] = `
<div>
  <h1>
    Breaking Bad quotes
  </h1>
  <hr />
  <div
    className="alert alert-info text-center"
  >
    loading ...
  </div>
  <button
    className="btn btn-primary"
    onClick={[Function]}
  >
    next quote
  </button>
</div>
`;
